          encoding and decoding along with the Standard and RFC1924 formats. It
          is mainly used in producing Binary data for *.ass files.

    * **H2A:**

      * **New:** This is a new module which contains necessary code to be used
        in "Houdini To Arnold" Python SOP which exports fur data (for now) to
        arnold compatible *.ass file for Houdini.

0.1.0.a5
========

* **Pipeline:**

  * **UI:**

    * **Version Creator:**

      * **New:** Version Creator now tries to allow the user to cancel login,
        but it is not completely working for now.
      * **New:** Version Creator UI is now using QTreeView to display tasks on
        demand.
      * **New:** Version Creator UI is now able to restore the ui for a deeper
        task hierarchy with not yet loaded task items in the tasks_treeView.
      * **New:** Removed the statuses_comboBox from Version Creator UI.
      * **New:** Added a new context menu to the items in the tasks_treeView
        where the user is able to go to the dependent or dependee tasks of the
        clicked item in Version Creator UI.
      * **Fix:** 'my_tasks_only_checkBox' is back with the functionality.
      * **New:** Added a new and simple search field for the tasks_treeView. It
        needs to be greatly enhanced.
      * **Fix:** The default take name is now inserted at the top of the takes
        list.
      * **New:** It is now possible to use CamelCase in take names.
      * **New:** Added a disabled 'No Dependencies' menu action for tasks with
        no dependencies or dependees.

    * **Version Updater:**

      * **Fix:** Fixed check state checking for PySide by using
        QtCore.Qt.CheckState.

  * **Env:**

    * **MayaEnv:**

      * **New:** External files are now moved to the
        version.absolute_path/external_files folder
      * **Fix:** Fixed a bug where the references where reloaded over and over
        again when saving a new version.